Bug 302176 - contact runner doesn't work with kde 4.8
Summary: contact runner doesn't work with kde 4.8
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contact-runner (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 303646 303652 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-19 09:18 UTC by George Kiagiadakis
Modified: 2012-07-17 09:06 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description George Kiagiadakis 2012-06-19 09:18:04 UTC
As discussed on irc, the contact runner doesn't seem to work on 4.8 for some of us. It works perfectly on trunk, but on 4.8 although it lists contacts, you can't do anything with them. No actions and no reaction when you hit enter.

Reproducible: Always
Comment 1 Dominik Cermak 2012-06-20 17:27:16 UTC
As I'm one of those for them it doesn't work on 4.8, I tested with 4.9 beta 2 and it isn't working for me there too.
Comment 2 George Kiagiadakis 2012-06-20 17:33:53 UTC
Ok, then it probably is something unrelated to the kde version that affects krunner
Comment 3 Dominik Cermak 2012-06-20 20:02:37 UTC
Any idea how to debug this?
Comment 4 Martin Klapetek 2012-06-20 21:15:53 UTC
Fwiw, works correctly for me on KDE 4.8.3.
Comment 5 Daniel Vrátil 2012-06-20 22:18:37 UTC
The runner is working as expected for me on KDe 4.9 beta 2 on ArchLinux. 

Can you please provide information about your distribution and packages/repositories with which it does not work for you? Thanks
Comment 6 Dominik Cermak 2012-06-21 11:10:53 UTC
(In reply to comment #5)
> The runner is working as expected for me on KDe 4.9 beta 2 on ArchLinux. 
> 
> Can you please provide information about your distribution and
> packages/repositories with which it does not work for you? Thanks

Hi Dan, I'm too on ArchLinux. My 4.8 environment has only standart repos active an all KDE-Telepathy is compiled from git.
My second system is with [testing] [kde-unstable] [gnome-unstable] enabled and therefor has KDE 4.9 beta 2. KDE-Telepathy on this system is Arch packages from [extra].
So we should have a pretty similar environment...
Comment 7 FabiB 2012-06-24 12:17:58 UTC
after I hit Enter 
krunner(9337) ContactRunner::run: Account "ktp_contacts_gabble/jabber/fabidesu_40googlemail_2ecom0" not found in the model! 
could it be possible that telepathy-qt4 0.9.1 is to old?

Qt: 4.8.2
KDE: 4.8.90
telepathy-qt4: 0.9.1
Comment 8 Dominik Cermak 2012-06-29 17:03:51 UTC
(In reply to comment #7)
> after I hit Enter 
> krunner(9337) ContactRunner::run: Account
> "ktp_contacts_gabble/jabber/fabidesu_40googlemail_2ecom0" not found in the
> model! 

I also get this error.

> could it be possible that telepathy-qt4 0.9.1 is to old?

I have tp-qt master and it also happens, so it can't be too old.
Comment 9 Daniel Vrátil 2012-07-01 12:36:10 UTC
Git commit 73349d23d73ad9c927564995e13da6962908b19f by Dan Vrátil.
Committed on 01/07/2012 at 14:30.
Pushed by dvratil into branch 'master'.

Store AccountPtr and ContactPtr as QueryMatch::data()

Storing the account and contact directly makes it not just
faster to retrieve them in run(), also solves issues with
passing around an account/contact ID (whose syntax can change).

REVIEW: 105398

M  +32   -36   src/contactrunner.cpp

http://commits.kde.org/ktp-contact-runner/73349d23d73ad9c927564995e13da6962908b19f
Comment 10 Daniel Vrátil 2012-07-17 08:43:33 UTC
*** Bug 303646 has been marked as a duplicate of this bug. ***
Comment 11 Daniel Vrátil 2012-07-17 09:06:29 UTC
*** Bug 303652 has been marked as a duplicate of this bug. ***