Store AccountPtr and ContactPtr as QueryMatch::data()

Storing the account and contact directly makes it not just
faster to retrieve them in run(), also solves issues with
passing around an account/contact ID (whose syntax can change).

REVIEW: 105398
BUG: 302176